--- a/styles/partials/components/feature.scss
+++ b/styles/partials/components/feature.scss
@@ -12,7 +12,7 @@
     margin-bottom: $feature-offset;
 
     .feature-image {
-      margin-top: 100px;
+      margin-top: 70px;
     }
   }
 }
